# reviews-pipeline

./: .env.example.py  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: cf644f3341c6_added_review_tables.py
app/: settings.py
app/api/: main.py  models.py
app/api/routes/: countries.py  reviewers.py  reviews.py
app/data/: process.py  s3_client.py
app/database/: __init__.py  crud.py  models.py
app/reviews_pipeline/: main.py  schema.py  settings.py
app/reviews_pipeline/database/: __init__.py  crud.py  models.py
docker/: Dockerfile  docker-compose.yaml
docker/init/: init.sql
reviews_pipeline/: main.py  settings.py
reviews_pipeline/database/: __init__.py  crud.py  models.py
tests/api/routes/: test_countries.py
tests/utils/: country.py
