[tool.poetry]
name = "reviews-pipeline"
version = "0.1.0"
description = ""
authors = ["Nicolae <for.nicolae.popovici@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
uuid = "^1.30"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
boto3 = "^1.35.64"
pydantic = "^2.9.2"
email-validator = "^2.2.0"
fastapi = "^0.115.5"
sqlmodel = "^0.0.22"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120